Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8763

sys_vars.wsrep_on_basic fails with ps-protocol, WSREP has not yet prepared node, assertion `thd->m_statement_psi == __null' fails in do_command

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1(EOL)
    • 10.1.8
    • Tests, MTR, wsrep
    • None

    Description

      perl ./mtr sys_vars.wsrep_on_basic

      mysqltest: At line 20: query 'SELECT @@global.wsrep_on' failed: 1047: WSREP has not yet prepared node for application use
       
      The result from queries just before the failure was:
      < snip >
      SELECT @@session.wsrep_on;
      @@session.wsrep_on
      0
       
      # scope and valid values
      SET @@global.wsrep_on=OFF;
      SELECT @@global.wsrep_on;
      @@global.wsrep_on
      0
      SET @@global.wsrep_on=ON;
      SELECT @@global.wsrep_on;
       
      More results from queries before failure can be found in /data/repo/git/10.1/mysql-test/var/log/wsrep_on_basic.log

      Stack trace from 10.1 commit 3d9abaf052400b24de93534ace30657e0f6cb6e4

      10.1/sql/sql_parse.cc:1134: bool do_command(THD*): Assertion `thd->m_statement_psi == __null' failed.
      150907  2:33:13 [ERROR] mysqld got signal 6 ;
       
      #6  0x00007f1cf633e311 in *__GI___assert_fail (assertion=0x7f1cf95dcfa8 "thd->m_statement_psi == __null", file=<optimized out>, line=1134, function=0x7f1cf95df890 "bool do_command(THD*)") at assert.c:81
      #7  0x00007f1cf8c778e6 in do_command (thd=0x7f1cef176070) at /home/elenst/git/10.1/sql/sql_parse.cc:1134
      #8  0x00007f1cf8dac069 in do_handle_one_connection (thd_arg=0x7f1cef176070) at /home/elenst/git/10.1/sql/sql_connect.cc:1350
      #9  0x00007f1cf8dabdba in handle_one_connection (arg=0x7f1cef176070) at /home/elenst/git/10.1/sql/sql_connect.cc:1262
      #10 0x00007f1cf9375d2b in pfs_spawn_thread (arg=0x7f1cf5823d70) at /home/elenst/git/10.1/storage/perfschema/pfs.cc:1860
      #11 0x00007f1cf8359b50 in start_thread (arg=<optimized out>) at pthread_create.c:304
      #12 0x00007f1cf63ee95d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112

      Attachments

        Issue Links

          Activity

            People

              nirbhay_c Nirbhay Choubey (Inactive)
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h
                  3h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.